and on the first day

--- a/src/index.html
+++ b/src/index.html
@@ -12,3 +12,5 @@
   <app-root></app-root>
 </body>
 </html>
+<!-- This SystemJS configuration loads umd packages from the web -->
+ <script src="systemjs.config.server.js"></script>
